--- a/docs/enterprise/index.mdx
+++ b/docs/enterprise/index.mdx
@@ -38,21 +38,17 @@ Explore how other organizations are driving real impact with Open WebUI.
 
 ## Let’s Talk
 
+:::tip
+To help us respond quickly and efficiently to your inquiry, **please use your official work email address**, Personal email accounts (e.g. gmail.com, hotmail.com, proton.me, icloud.com, yahoo.com etc.) are often flagged by our system and will not be answered.
+:::
 
 **sales@openwebui.com** — Send us your deployment **end user count (seats)**, and let’s explore how we can work together!
-
 
 :::info
 Enterprise licenses and partnership opportunities are available **exclusively to registered entities and organizations**. At this time, we are unable to accommodate individual users. We appreciate your understanding and interest.
 
 **We are not seeking, open to, or in need of any form of disguised collaboration or contribution pitches/offers.** Any attempt to characterize engineering assistance, co-development, or roadmap input **as an alternative to our enterprise licensing program will not receive a response**. All organizational engagement with Open WebUI occurs **solely and exclusively through enterprise licensing**.
 :::
-
-
-:::tip
-To help us respond quickly and efficiently to your inquiry, **please use your official work email address**, Personal email accounts (e.g. gmail.com, hotmail.com, icloud.com, yahoo.com etc.) are often flagged by our system and will not be answered.
-:::
-
 
 Take your AI strategy to the next level with our **premium enterprise solutions**, crafted for organizations that demand **expert consulting, tailored deployment, and dedicated support.**
 
