--- a/docs/license.mdx
+++ b/docs/license.mdx
@@ -157,9 +157,9 @@ BSD-3 output/forks have **maximum flexibility**: as long as you keep the origina
 
 ### 6. Does this mean Open WebUI is “no longer open source”?
 
-It's a great, and complicated, question, because **"open source" can mean many different things to many people**.
+It's a great, and complicated, question, because "open source" can mean many different things to many people.
 
-- **In the narrowest, most “by-the-book” sense, our new branding clause means Open WebUI v0.6.6+ isn’t OSI-certified "open source.”**
+- In the narrowest, most “by-the-book” sense, our new branding clause means: **No, Open WebUI v0.6.6+ isn’t OSI-certified "open source.”**
     - Example: The OSI would not certify licenses that require you to keep original branding.
 
 - However, compared to what most people mean in practice ,  **“is the code available, can I use it, fork it, change it, build things with it, and not pay you or get a special key?”** ,  the answer is still a resounding **yes**.
