--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -132,7 +132,7 @@ docker run -d --name watchtower --restart unless-stopped -v /var/run/docker.sock
 :::info
 
 ### Platform Compatibility
-Open WebUI works on macOS, Linux (x86_64 and ARM64, including Raspberry Pi and other ARM boards), and Windows.
+Open WebUI works on macOS, Linux (x86_64 and ARM64, including Raspberry Pi and other ARM boards like NVIDIA DGX Spark), and Windows.
 
 :::
 
