--- a/docs/faq.mdx
+++ b/docs/faq.mdx
@@ -19,11 +19,11 @@ For more details on enterprise solutions and branding customizations, [click her
 
 ### Q: Can I use Open WebUI in outer space (e.g., Mars and beyond) or other extreme environments?
 
-**A:** **Yes.** Open WebUI is fully self-hosted and does not rely on persistent internet connectivity, making it suitable for environments where cloud-based systems are impractical or impossible. As long as the underlying hardware can run a supported runtime and execute an LLM locally or on a reachable internal network, Open WebUI will function normally regardless of location.
+**A:** **Yes.** Open WebUI is fully self-hosted and does not rely on persistent internet connectivity, making it suitable for environments where cloud-based systems are impractical or impossible. As long as the underlying hardware can run a supported runtime, Open WebUI will function normally regardless of location.
 
 This includes outer space and off-planet environments such as spacecraft, space stations, lunar bases, and Mars transit or surface habitats, where communication delays or total isolation make external dependencies unworkable. Open WebUI’s offline-first architecture ensures that models, tools, and data remain local and predictable even under extreme latency or complete disconnection.
 
-The same principles apply in harsh terrestrial settings, including submarines, polar research stations, underground facilities, air-gapped networks, disaster zones, and mobile command environments. In short, if your system can boot, power itself, and run an LLM, Open WebUI will run—by design.
+The same principles apply in harsh terrestrial settings, including submarines, polar research stations, underground facilities, air-gapped networks, disaster zones, and mobile command environments. In short, if your system can boot, power itself, Open WebUI will run—by design.
 
 ### Q: Why am I asked to sign up? Where are my data being sent to?
 
