--- a/docs/getting-started/env-configuration.mdx
+++ b/docs/getting-started/env-configuration.mdx
@@ -2889,6 +2889,13 @@ This environment variable was previously named "WEB_SEARCH_CONCURRENT_REQUESTS".
 the search query. Example: `http://searxng.local/search?q=<query>`
 - Persistence: This environment variable is a `PersistentConfig` variable.
 
+#### `SEARXNG_LANGUAGE`
+
+- Type: `str`
+- Default: `all`
+- Description: This variable is used in the request to searxng as the "search language" (arguement "language").
+- Persistence: This environment variable is a `PersistentConfig` variable.
+
 #### `GOOGLE_PSE_API_KEY`
 
 - Type: `str`
