--- a/docs/getting-started/env-configuration.mdx
+++ b/docs/getting-started/env-configuration.mdx
@@ -3198,6 +3198,14 @@ Using a remote Playwright browser via `PLAYWRIGHT_WS_URL` can be beneficial for:
 - Description: Sets the API key for Firecrawl API.
 - Persistence: This environment variable is a `PersistentConfig` variable.
 
+#### `FIRECRAWL_TIMEOUT`
+
+- Type: `int`
+- Default: `2000`
+- Description: Sets the timeout in **milliseconds** used by firecrawl [Search](https://docs.firecrawl.dev/features/search). 
+Default is 2000ms (meaning 2 seconds). Please refere to [firecrawl Search API](https://docs.firecrawl.dev/api-reference/endpoint/search) for more details.
+- Persistence: This environment variable is a `PersistentConfig` variable.
+
 #### `PLAYWRIGHT_TIMEOUT`
 
 - Type: `int`
